--- a/style.css
+++ b/style.css
@@ -1,14 +1,108 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&family=Roboto+Slab:wght@500;700&display=swap');
 
+body {
+    box-sizing: border-box;
+    margin: 0;
+}
+
+h1 {
+    font-family: 'Roboto Slab';
+    font-weight: 700;
+    font-size: 49px;
+    line-height: 51.7px;
+    color: #292733;
+    text-transform: uppercase;
+}
+
+h4 {
+    font-family: 'Roboto Slab';
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 39.96px;
+    color: #FFFFFF;
+}
+
+h5 {
+    font-family: 'Roboto Slab';
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 25.32px;
+    color: #FFFFFF;
+}
+
+h6 {
+    font-family: 'Roboto Slab';
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 23.7px;
+    color: #FFFFFF;
+    margin: 13px 0;
+}
+
+p, a {
+    font-family: 'Poppins';
+    font-weight: 400;
+    font-size: 16px;
+}
+
+.btn--red {
+    padding: 20px 40px;
+    font-family: 'Poppins';
+    font-weight: 500;
+    font-size: 24px;
+    color: #FFFFFF;
+    background-color: #C20502;
+    border: none;
+    cursor: pointer;
+}
+
+.btn--red:hover {
+    padding: 20px 40px;
+    font-family: 'Poppins';
+    font-weight: 500;
+    font-size: 24px;
+    color: #C20502;
+    background-color: #FFFFFF;
+}
+
+.btn--white {
+    padding: 20px 40px;
+    font-family: 'Poppins';
+    font-weight: 500;
+    font-size: 24px;
+    color: #C20502;
+    background-color: #FFFFFF;
+    border: none;
+    cursor: pointer;
+}
+
+.btn--white:hover {
+    padding: 20px 40px;
+    font-family: 'Poppins';
+    font-weight: 500;
+    font-size: 24px;
+    color: #FFFFFF;
+    background-color: #C20502;
+}
+
+.header, .section__banner, .footer, .footer__black, .section__services, .section__timbers {
+    padding: 0px 132px;
+}
+
+.header__unordered, .footer__unordered {
+    padding: 0;
+}
+
 .header {
     background-color: #292733;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     gap: 30px;
+    min-height: 114px;
 }
 
-li {
+.header__list {
     display: inline-block;
     text-transform: uppercase;
     margin: 0 10px 0 10px;
@@ -16,12 +110,186 @@ li {
     font-weight: 500;
 }
 
-li a:hover {
+.header__list a {
+    text-decoration: none;
+    color: white;
+}
+
+.header__list a:hover {
     color: #C20502;
 }
 
-a {
-    text-decoration: none;
-    color: white;
-    
+.header__img {
+    margin: 0px 4px;
 }
+
+.section__banner {
+    min-height: 741px;
+    background-image: url(Assets/Banner\ background.png);
+    background-size: cover;
+    object-fit: fill;
+    background-repeat: no-repeat;
+    background-position: center;
+    display: flex;
+    justify-content: right;
+    align-items: center;
+}
+
+.banner__heading {
+    width: 31%;
+    text-align: right;
+}
+
+.section__services {
+    min-height: 303px;
+    background-color: #C20502;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    text-align: center;
+}
+
+.section__enquire {
+    min-height: 501px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.enquire__trade-me {
+    min-height: 501px;
+    width: 50%;
+    background-image: url(Assets/enquire_bg1.png);
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.enquire__enquire-now {
+    min-height: 501px;
+    width: 50%;
+    background-image: url(Assets/enquire_bg2.png);
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.enquire__decking-timber {
+    text-align: center;
+}
+
+.section__quality {
+    min-height: 591px;
+    background-image: url(Assets/good\ quality\ bg.png);
+    text-align: center;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.quality__container {
+    width: 50%;
+}
+
+.quality__container h1 {
+    color: white;
+}
+
+.section__shop {
+    min-height: 550px;
+    display: flex;
+}
+
+.shop__container-first {
+    min-height: 775px;
+    width: 60%;
+    background-image: url(Assets/log.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    display: flex;
+    justify-content: end;
+    align-items: center;
+}
+
+.shop__container-second {
+    max-height: 690px;
+    width: 40%;
+    background-color: #F1F3F4;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.shop__log {
+    width: 35%;
+}
+
+.shop__log h4 {
+    width: 70%;
+}
+
+.shop__plank h4 {
+    color: #292733;
+}
+
+.section__timbers {
+    min-height: 550px;
+    display: flex;
+    justify-content: center;
+}
+
+.timbers__products {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.timbers__products h6 {
+    color: #000000;
+}
+
+.footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    min-height: 461px;
+    background-color: #292733;
+}
+
+.footer ul {
+    list-style: none;
+}
+
+.footer__logo {
+    color: #FFFFFF;
+}
+
+.footer__list a {
+    text-decoration: none;
+    color: #888888;
+}
+
+.footer__list a:hover {
+    text-decoration: none;
+    color: #FFFFFF;
+}
+
+.footer__black {
+    min-height: 145px;
+    background-color: #000000;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.footer__copyright {
+    color: #888888;
+    font-size: 13px;
+    margin: 0;
+}
+
+
