--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,14 @@ h1 {
     text-transform: uppercase;
 }
 
+h3 {
+    font-family: 'Roboto Slab';
+    font-weight: 700;
+    font-size: 40px;
+    line-height: 52.75px;
+    color: #FFFFFF;
+}
+
 h4 {
     font-family: 'Roboto Slab';
     font-weight: 700;
@@ -85,7 +93,7 @@ p, a {
     background-color: #C20502;
 }
 
-.header, .section__banner, .footer, .footer__black, .section__services, .section__timbers {
+.header, .section__banner, .footer, .footer__black, .section__services, .section__timbers, .section__dealers {
     padding: 0px 132px;
 }
 
@@ -136,7 +144,7 @@ p, a {
 }
 
 .banner__heading {
-    width: 31%;
+    width: 35%;
     text-align: right;
 }
 
@@ -237,19 +245,158 @@ p, a {
 }
 
 .section__timbers {
-    min-height: 550px;
-    display: flex;
-    justify-content: center;
+    min-height: 700px;
+}
+
+.timbers__heading {
+    text-align: center;
 }
 
 .timbers__products {
     display: flex;
     justify-content: center;
     align-items: center;
+    gap: 21px;
 }
 
-.timbers__products h6 {
+.timbers__product-1, .timbers__product-2, .timbers__product-3, .timbers__product-4, .timbers__product-5, .timbers__product-6, .timbers__product-7, .timbers__product-8 {
+    width: 277px;
+}
+
+.timbers__location {
+    font-family: 'Roboto Slab';
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 21.1px;
+    color: #888888;
+}
+
+.timbers__name {
     color: #000000;
+}
+
+.timbers__price {
+    color: #C20502;
+}
+
+.section__dealers {
+    min-height: 590px;
+    display: flex;
+    justify-content: center;
+    margin: 100px 0;
+}
+
+.dealers__timber {
+    width: 50%;
+    background-image: url(Assets/dealers.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.dealers__order {
+    background-color: #C20502;
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.section__browse {
+    min-height: 471px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.section__browse h4 {
+    margin: 20px 0;
+} 
+
+.browse__container-first {
+    width: 50%;
+    min-height: 471px;
+    background-image:url(Assets/hardwares.png);
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.browse__container-second {
+    width: 50%;
+    min-height: 471px;
+    background-image:url(Assets/maple.png);
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.section__roundwood {
+    min-height: 638px;
+    background-image: url(Assets/roundwood.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.roundwood__container {
+    width: 50%;
+}
+
+.section__roundwood h1, .section__roundwood p {
+    color: #FFFFFF;
+}
+
+.section__products {
+    margin: 50px 0;
+}
+
+.products__pagination {
+    min-height: 150px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.section__newsletter {
+    min-height: 436px;
+    background-color: #C20502;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.section__newsletter h1, .section__newsletter p {
+    color: #FFFFFF;
+}
+
+.newsletter__input {
+    font-family: 'Poppins';
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 24px;
+    padding:20px 50em 20px 20px;
+    text-align: left;
+    position: relative;
+}
+
+.newsletter__input-icon {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+}
+
+.newsletter__icon {
+    padding: 0px 20px;
+    position: absolute;
+    width: 20px;
+    height: 20px;
 }
 
 .footer {
@@ -260,12 +407,12 @@ p, a {
     background-color: #292733;
 }
 
-.footer ul {
-    list-style: none;
-}
-
 .footer__logo {
     color: #FFFFFF;
+}
+
+.footer__unordered {
+    list-style: none;
 }
 
 .footer__list a {
