--- a/styles.css
+++ b/styles.css
@@ -93,7 +93,7 @@ p, a {
     background-color: #C20502;
 }
 
-.header, .section__banner, .footer, .footer__black, .section__services, .section__timbers, .browse__container-first, .browse__container-second, .section__dealers  {
+.header, .section__banner, .footer, .footer__black, .section__services, .section__timbers, .browse__container-first, .browse__container-second, .section__dealers, .dealers__order-container  {
     padding: 0px 132px;
 }
 
@@ -297,7 +297,7 @@ p, a {
     background-color: #C20502;
     width: 50%;
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
 }
 
